--- a/students/NeshcheretEA/calc.css
+++ b/students/NeshcheretEA/calc.css
@@ -66,15 +66,13 @@ button.change_theme {
     cursor: pointer;
 }
 
-body {
-    background = "white"
-}
-
 .main_window {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-image: url("ggst.jpg");
+
 }
 
 .basement {
